<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Line #1 #cccccc -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff7f2a"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvReportLine1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="date" />
        </LinearLayout>

        <!--
        Line #2 

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvReportLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="report" />
        </LinearLayout>
        -->
        <!-- Table -->

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >

            <!-- ROW 1-HEADER -->

            <TableRow>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="\" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/day_time_night" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/day_time_mourning" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/day_time_day" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/day_time_evening" />
            </TableRow>
            <!-- ROW 2-Temperature -->

            <TableRow>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/report_temperature" />

                <TextView
                    android:id="@+id/tvReportTempN"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Night" />

                <TextView
                    android:id="@+id/tvReportTempM"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Mourning" />

                <TextView
                    android:id="@+id/tvReportTempD"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Day" />

                <TextView
                    android:id="@+id/tvReportTempE"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Evening" />
            </TableRow>
            <!-- ROW 3-Cloud 

            <TableRow>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/my_cloud" />

                <TextView
                    android:id="@+id/tvReportCloudN"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Night" />

                <TextView
                    android:id="@+id/tvReportCloudM"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Mourning" />

                <TextView
                    android:id="@+id/tvReportCloudD"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Day" />

                <TextView
                    android:id="@+id/tvReportCloudE"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Evening" />
            </TableRow>
            -->
            <!-- ROW 4-Rain 
            <TableRow>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/my_rain" />

                <TextView
                    android:id="@+id/tvReportRainN"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Night" />

                <TextView
                    android:id="@+id/tvReportRainM"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Mourning" />

                <TextView
                    android:id="@+id/tvReportRainD"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Day" />

                <TextView
                    android:id="@+id/tvReportRainE"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Evening" />
            </TableRow>
            -->
            <!-- ROW 5-Pict -->
            <TableRow>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher"
                    />
                
                <ImageView
                    android:id="@+id/ivReportPictN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />
                <ImageView
                    android:id="@+id/ivReportPictM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />
                <ImageView
                    android:id="@+id/ivReportPictD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />
                <ImageView
                    android:id="@+id/ivReportPictE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />
            </TableRow>            
            
        </TableLayout>
    </LinearLayout>

</LinearLayout>